[gd_scene load_steps=26 format=3 uid="uid://bteed0gfmr55m"]

[ext_resource type="Script" path="res://scripts/Enemy_mage.gd" id="1_wr1q6"]
[ext_resource type="Texture2D" uid="uid://cetj3i6mwwyqe" path="res://assets/enemy_mage1.png" id="2_np1on"]
[ext_resource type="PackedScene" uid="uid://cw0dyuimranom" path="res://scenes/health_component.tscn" id="3_ptgs7"]
[ext_resource type="PackedScene" uid="uid://b05t7qod7tx3" path="res://scenes/hitbox_component.tscn" id="4_pyi7i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vsa24"]
atlas = ExtResource("2_np1on")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83k5w"]
atlas = ExtResource("2_np1on")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sc8u"]
atlas = ExtResource("2_np1on")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyp5x"]
atlas = ExtResource("2_np1on")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47lh5"]
atlas = ExtResource("2_np1on")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_13kes"]
atlas = ExtResource("2_np1on")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iadq"]
atlas = ExtResource("2_np1on")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbf53"]
atlas = ExtResource("2_np1on")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf2gl"]
atlas = ExtResource("2_np1on")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wbb0"]
atlas = ExtResource("2_np1on")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7aep"]
atlas = ExtResource("2_np1on")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf02v"]
atlas = ExtResource("2_np1on")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1axyd"]
atlas = ExtResource("2_np1on")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae437"]
atlas = ExtResource("2_np1on")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kfsc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsa24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83k5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sc8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyp5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47lh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13kes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iadq")
}],
"loop": false,
"name": &"attack",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbf53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf2gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf2gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wbb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7aep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf02v")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1axyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae437")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kuxed"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wftwe"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hba3s"]
radius = 140.014

[sub_resource type="Animation" id="Animation_jqdbf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0.501961)]
}

[sub_resource type="Animation" id="Animation_luqps"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 0.501961)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0rfo"]
_data = {
"RESET": SubResource("Animation_jqdbf"),
"hurt": SubResource("Animation_luqps")
}

[node name="Enemy_mage" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_wr1q6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
clip_children = 2
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7kfsc")
animation = &"idle"
frame = 1
frame_progress = 0.925734
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://assets/enemy_mage1.aseprite"
}

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
visible = false
offset_left = -32.0
offset_top = -20.0
offset_right = 32.0
offset_bottom = 28.0
color = Color(1, 0, 0, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_kuxed")

[node name="HealthComponent" parent="." instance=ExtResource("3_ptgs7")]
MAX_HEALTH = 10

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_pyi7i")]
collision_layer = 4
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
visible = false
position = Vector2(-1, 4)
shape = SubResource("CircleShape2D_wftwe")

[node name="Detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_area"]
visible = false
shape = SubResource("CircleShape2D_hba3s")

[node name="hurt" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0rfo")
}

[node name="Hurt_timer" type="Timer" parent="."]
wait_time = 0.3

[node name="Attack_anim_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Attack_cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Death_timer" type="Timer" parent="."]
one_shot = true

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
[connection signal="hit" from="HitboxComponent" to="." method="_on_hitbox_component_hit"]
[connection signal="body_entered" from="Detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Hurt_timer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="Attack_anim_timer" to="." method="_on_attack_anim_timer_timeout"]
[connection signal="timeout" from="Attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Death_timer" to="." method="_on_death_timer_timeout"]
